
[project]
name = "ascend-sdk"
version = "1.7.0"
description = "Python Client SDK for Apex Ascend Platform"
authors = [{ name = "Apex Fintech Solutions" },]
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "PyJWT (>=2.4.0,<3.0.0)",
    "cryptography >=43.0.0",
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "jsonpath-python >=1.0.6",
    "pydantic >=2.11.2",
    "requests (>=2.32.3,<3.0.0)",
]

[tool.poetry]
license = "MIT"
packages = [
    { include = "ascend_sdk", from = "src" }
]
include = ["py.typed", "src/ascend_sdk/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/ascend_sdk/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
pylint = "==3.2.3"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-xdist = "^3.8.0"
pytz = "2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


